apps/code-server/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  labels:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/instance: code-server
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Code Server"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "vscode"
    gethomepage.dev/href: "https://code.cyphers.app"
    gethomepage.dev/description: "Web IDE"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/instance: code-server
