apps/code-server/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`code.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: code-server
          namespace: code-server
          port: 8080
  tls:
    secretName: production-cyphers-app-tls
